# zmq-jni

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  pom.xml
src/main/c++/: config.hpp.in  zmq.cpp
src/main/java/com/jzeromq/jni/: Errno.java  Loader.java  ZMQ.java
src/main/java/com/jzeromq/perf/: LocalThroughput.java  RemoteThroughput.java
src/main/java/org/zeromq/: ZMQ.java
src/main/java/org/zeromq/jni/: Errno.java  Loader.java  Main.java  PollItemArray.java  PollItems.java  ZMQ.java
src/main/java/org/zeromq/jni/perf/: LocalThroughput.java  RemoteThroughput.java
src/test/clojure/zeromq/: zmq.clj  zmq_tcp.clj
zmq-jni-Linux-amd64/: pom.xml
